--- a/package.json
+++ b/package.json
@@ -18,6 +18,15 @@
   },
   "homepage": "https://github.com/anderson-consultant-it/clean-architecture-solid#readme",
   "devDependencies": {
-    "git-commit-msg-linter": "^2.4.2"
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
+    "@types/node": "^14.0.5",
+    "husky": "^4.2.5",
+    "typescript": "^3.9.3"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
