--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,8 @@
   },
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/strict-boolean-expressions": "off",
     "class-methods-use-this":"off",
     "@typescript-eslint/camelcase":"off",
     "no-useless-constructor": "off",
