--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^14.0.5",
     "@typescript-eslint/eslint-plugin": "^3.0.1",
     "@typescript-eslint/parser": "^3.0.1",
+    "commitlint-config-awesome": "^1.0.4",
     "eslint": "^7.1.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.10.1",
