--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/strict-boolean-expressions": "off",
     "no-restricted-syntax": ["off","ForOfStatement"],
+    "max-classes-per-file":"off",
     "import/prefer-default-export": "off",
     "class-methods-use-this":"off",
     "@typescript-eslint/camelcase":"off",
