--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@commitlint/config-conventional": "^8.3.4",
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.5",
+    "@types/validator": "^13.0.0",
     "@typescript-eslint/eslint-plugin": "^3.0.1",
     "@typescript-eslint/parser": "^3.0.1",
     "commitlint-config-awesome": "^1.0.4",
@@ -47,5 +48,8 @@
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
+  },
+  "dependencies": {
+    "validator": "^13.0.0"
   }
 }
